Configure surefire plugin to use JAXB 2.1 using the endorsed lib mechanism to get it to build on JDK6 as this is what the nightly build machine uses.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@583639 13f79535-47bb-0310-9956-ffa450edef68